k8s/base/core/api/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: craftcloud-system
spec:
  stripPrefix:
    prefixes:
      - /api
